# brazil_e-commerce

./: .gitignore  5조_Olist 연구보고서.docx  README.md  Seller_analysis.ipynb  dataERD.mmd  olist_data_spec_korean.md  olist_data_specifications.md  pyproject.toml  심화 프로젝트 코드 파일_5조_seller.ipynb.ipynb
