[project]
name = "brazil"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "category-encoders>=2.9.0",
    "geopandas>=1.1.2",
    "haversine>=2.9.0",
    "imbalanced-learn>=0.14.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "scikit-learn>=1.8.0",
    "scikit-posthocs>=0.12.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
    "xlrd>=2.0.2",
]
